# C4REQBER

./: .coveragerc  .dockerignore  .env.example  .gitignore  .gitlab-ci.yml  .gitleaks.toml  .pre-commit-config.yaml  .secrets.baseline  AGENTS.md  ARCHITECTURE_AUDIT.md  ARCHITECTURE_C4R.md  ARCHITECTURE_DECISIONS.md  ARCHITECTURE_TUI_V8.md  CHANGELOG.md  CHANGELOG.ru.md  CITATION.cff  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DOCKER_SETUP.md  Dockerfile  Dockerfile.backend  Dockerfile.frontend  Dockerfile.fullstack  Dockerfile.simple  INSTALL.md  LICENSE  MERGE_PLAN.md  Makefile  NOTICE  OBSERVER_POSITION_ROADMAP.md  QUICKSTART.md  README.md  README_HUMANIITY_SAVING_DISCOVERIES.md  REAL_TESTING_GUIDE.md  REORG_ANALYSIS.md  REWORK_PLAN.md  SECURITY.md  THIRD_PARTY_LICENSES.md  WHITEPAPER.ru.md  (+26 more)
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.husky/: pre-push
MiniM-M3-Artefacts/: REPORT-v9.md  REPORT.md  model_health.json  tui-v8-code-review.md  tui-v9-cockpit-plan-v2.md  tui-v9-cockpit-plan-v3.md  tui-v9-translation-stack-plan.md
alembic/: env.py  script.py.mako
archive/: FUNCGRADE_PLAN_v7.md  LICENSE-COMMERCIAL.md  README.md  TURBO_CDI_PRD_v6.1.md  TURBO_CDI_v7.5_BATCHED_PLAN.md  TURBO_CDI_v7.5_INTEGRATION_PLAN.md  TURBO_CDI_v7_ORCHESTRATION_PLAN.md  TURBO_CDI_v8_BATCHED_PLAN.md  big-problems.md
config/: c4_triz_mappings.yaml  mission_free_models.json
data/: calibration.json  knowledge_graph.json
discovery/: hypothesis.md  proof.lean  refs.bib
dissertations/: README.md  dissertation_01_quantum_error_correction.md  dissertation_02_neuromorphic.md  dissertation_03_climate_triz_cdi.md  dissertation_04_desci_peer_review.md  dissertation_05_protein_folding.md  dissertation_06_ai_safety.md  dissertation_06_synthetic_biology.md  dissertation_07_economic_paradox.md  dissertation_08_space_habitat.md  dissertation_09_consciousness.md  dissertation_10_post_quantum_crypto.md
docker/: Dockerfile.vastai
docs/: API.md  API_KEYS.md  ARCHITECTURE.md  C4_META_Preprint_v5.3.3.md  C4_THEORY_SUMMARY.md  CI_RUNNER.md  COMPLETE_GUIDE.md  DEFERRED.md  DEPLOY_SERVER.md  GETTING_STARTED.md  GITHUB_INTEGRATION_ROADMAP.md  GPU_SETUP.md  HONESTY_CONTRACT.md  INSTALL.md  INTEGRATIONS.md  LEAN4_VERIFICATION.md  MASTER_AUDIT_2026-07-13.md  META_PRIME_ANALYSIS.md  NEWTON_BENCHMARK.md  OVERNIGHT_RELEASE_PLAN.md  POSTGRESQL_SETUP.md  README.md  RESEARCH_AUDIENCES.md  SELF_HOSTING.md  SOCIAL_PUBLISHING.md  SOUL.md  SPEED_SWARM_PRO_DEV_PLAN.md  SYSTEM_REQUIREMENTS.md  VERIFICATION_BACKENDS.md  WINDOWS_FLASH_ACCEPTANCE.md  _config.yml  arxiv_preprint.md  index.html  index.md  mcp_registry.md  open-source-models-self-hosting.md  sitemap.xml
exports/: discovery_full_v5.md  discovery_llm.md  discovery_real.json  discovery_real.md  paper_20260510_234403.tex
formal-proofs/: C4CompV5.agda  C4CompV5.agdai  README.md
k8s/: configmap.yaml  deploy.sh  deployment.yaml  hpa.yaml  migrate-job.yaml  namespace.yaml  postgres.yaml  redis.yaml  service.yaml
landing/: 404.html  index.html  manifest.json  sw.js
migrations/: init.sql
monitoring/: docker-compose.yml  prometheus.yml
openapi/: tui-v9.yaml
research/: C4REQBER_ENHANCEMENT_PLAN_v5.6.md  COMPETITIVE_ANALYSIS.md  GITHUB_OSS_RESEARCH_REPORT.md  REQBER_DOMINATION_PLAN.md  REQBER_UNIQUENESS_REPORT.md
scripts/: add_docstrings.py  backup.sh  build_mission_demo_video.sh  build_zh_complete.py  capture_tui_demo.sh  check_dead_go_imports.py  (+43 more)
v8/: README.md  STATUS.md  pyproject.toml  turbo-cdi
v8/api/websocket/: client_demo.py  server.py
v8/cognitive/bias_detector/: core.py
v8/cognitive/outcome_tracker/: core.py
v8/cognitive/user_profile/: core.py
v8/core/: container.py  orchestrator.py  settings.py
v8/discovery/: __init__.py  clarify.py  db_migration.py  gap_to_c4.py  lab.py  llm_adapter.py  operators.py  schema.sql  sources.py
v8/docs/: ARCHITECTURE.md
v8/generative/bridge_engine/: core.py
v8/generative/domain_generator/: core.py
v8/generative/pattern_synthesizer/: core.py
v8/living/wholeness_validator/: core.py
v8/meta/observer/: core.py
v8/meta/paradox_detector/: core.py
v8/meta/self_modifier/: core.py
v8/modules/: __init__.py
v8/modules/execution/: engine.py
v8/modules/grammar/: engine.py
v8/modules/navigation/: engine.py
v8/modules/operators/: engine.py
v8/modules/tactics/: engine.py
v8/modules/validation/: engine.py
v8/rag/: __init__.py  embedder.py  ingestion.py  retriever.py  vector_store.py
v8/scientific/falsification/: engine.py
v8/scientific/peer_review/: core.py
v8/scientific/reproducibility/: engine.py
v8/src/turbo_cdi/application/: events.py  transactions.py
v8/src/turbo_cdi/application/dto/: __init__.py
v8/src/turbo_cdi/application/services/: __init__.py
v8/src/turbo_cdi/application/use_cases/: __init__.py  advanced.py  commands.py  handlers.py  queries.py
v8/src/turbo_cdi/domain/: __init__.py  events.py  factories.py  rules.py
v8/src/turbo_cdi/domain/entities/: __init__.py  advanced.py
v8/src/turbo_cdi/domain/repositories/: __init__.py
v8/src/turbo_cdi/domain/services/: __init__.py  anomaly_service.py
v8/src/turbo_cdi/infrastructure/: auth.py  health.py
v8/src/turbo_cdi/infrastructure/config/: __init__.py  container.py
v8/src/turbo_cdi/infrastructure/repositories/: __init__.py  memory_repositories.py  sqlalchemy_repo.py
v8/src/turbo_cdi/presentation/api/: __init__.py  dependencies.py  exceptions.py  main.py  middleware.py  schemas.py
v8/src/turbo_cdi/presentation/api/routes/: __init__.py  auth_routes.py  corpus_routes.py  discovery_routes.py  health_routes.py  system_routes.py
v8/src/turbo_cdi/presentation/api/schemas/: auth_schemas.py
v8/src/turbo_cdi/presentation/api/templates/: dashboard.html  index.html
v8/src/turbo_cdi/presentation/cli/: __init__.py  commands.py
v8/src/turbo_cdi/presentation/websocket/: __init__.py
v8/tests/: conftest.py  test_advanced_features.py  test_v8_foundation.py
v8/tests/integration/: test_use_cases.py
v8/tests/unit/: test_entities.py  test_smoke.py
wasm/spectral/: Cargo.toml
wasm/spectral/src/: lib.rs
(+2985 files in other folders)
