[package]
name = "turbo-cdi-spectral"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = { workspace = true }
js-sys = { workspace = true }
ndarray = { workspace = true }

[dependencies.web-sys]
workspace = true
features = ["console"]

[profile.release]
opt-level = 3
lto = true
